ver 0.21.26 (not yet released)
* output
  - osx: fix crash bug
  - sles: support floating point samples
* archive
  - zzip: fix crash on corrupt ZIP file
* decoder
  - sndfile: fix lost samples at end of file

ver 0.21.25 (2020/07/06)
* protocol:
  - fix crash when using "rangeid" while playing
* database
  - simple: automatically scan new mounts
  - upnp: fix compatibility with Plex DLNA
* storage
  - fix disappearing mounts after mounting twice
  - udisks: fix reading ".mpdignore"
* input
  - file: detect premature end of file
  - smbclient: don't send credentials to MPD clients
* decoder
  - opus: apply pre-skip and end trimming
  - opus: fix memory leak
  - opus: fix crash bug
  - vorbis: fix crash bug
* output
  - osx: improve sample rate selection
  - osx: fix noise while stopping
* neighbor
  - upnp: fix crash during shutdown
* Windows/Android:
  - fix Boost detection after breaking change in Meson 0.54

ver 0.21.24 (2020/06/10)
* protocol
  - "tagtypes" requires no permissions
* database
  - simple: fix crash when mounting twice
* decoder
  - modplug: fix Windows build failure
  - wildmidi: attempt to detect WildMidi using pkg-config
  - wildmidi: fix Windows build failure
* player
  - don't restart current song if seeking beyond end
* Android
  - enable the decoder plugins GME, ModPlug and WildMidi
  - fix build failure with Android NDK r21
* Windows
  - fix stream playback
  - enable the decoder plugins GME, ModPlug and WildMidi
  - work around Meson bug breaking the Windows build with GCC 10
* fix unit test failure

ver 0.21.23 (2020/04/23)
* protocol
  - add tag fallback for AlbumSort
* storage
  - curl: fix corrupt "href" values in the presence of XML entities
  - curl: unescape "href" values
* input
  - nfs: fix crash bug
  - nfs: fix freeze bug on reconnect
* decoder
  - gme: adapt to API change in the upcoming version 0.7.0
* output
  - alsa: implement channel mapping for 5.0 and 7.0
* player
  - drain outputs at end of song in "single" mode